Implementación de JS en HTML

--- a/tema1/ejercicios/html/ej2.html
+++ b/tema1/ejercicios/html/ej2.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset='UTF-8'>
-    <title>Empiezo con JS</title>
+    <title>Mensaje por terminal</title>
 </head>
 <body>
     <script>
-        document.write("Hola Mundo!");
+        // por terminal
+        console.log("Hola Mundo!");
     </script>
 </body>
 </html>
