--- a/tema1/ejercicios/html/ej7.html
+++ b/tema1/ejercicios/html/ej7.html
@@ -17,7 +17,9 @@
             });
             return console.log(resultado);
         }
-        sumar(1, 2, 3, 4, 5);
+        sumar(1, 2, 3, 4, 5)
+
+        
     </script>
 </body>
 
